--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -268,3 +268,52 @@ footer .logo_holder img {
   width: 100%;
   height: auto;
 }
+
+#loader {
+  border: 8px solid #f3f3f3;
+  /* Light grey */
+  border-top: 8px solid #343b4c;
+  /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  z-index: 999999;
+  opacity: 1;
+}
+#loader.loaded {
+  opacity: 0;
+  z-index: -2;
+}
+
+#overlay-loader {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  z-index: 999998;
+  background-color: rgba(51, 51, 51, 0.6);
+  width: 100%;
+  height: 100%;
+}
+#overlay-loader.loaded {
+  opacity: 0;
+  z-index: -2;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
