--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,6 +15,7 @@ body {
 }
 body.moma {
   background-image: url("../images/moma.jpg");
+  transition: all ease 1s;
 }
 body ul {
   list-style-type: none;
@@ -300,7 +301,7 @@ footer .logo_holder img {
   top: 0;
   bottom: 0;
   z-index: 999998;
-  background-color: rgba(51, 51, 51, 0.6);
+  background-color: rgba(51, 51, 51, 0.9);
   width: 100%;
   height: 100%;
 }
