--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -26,6 +26,7 @@ body {
   transition: all ease 1s;
   &.moma{
       background-image: url('../images/moma.jpg');
+      transition: all ease 1s;
   }
   ul{
     list-style-type: none;
@@ -299,7 +300,7 @@ footer{
     top: 0;
     bottom: 0;
     z-index: 999998;
-    background-color: rgba($b,0.6);
+    background-color: rgba($b,0.9);
     width: 100%;
     height: 100%;
     &.loaded{
